--- a/css/kandev.css
+++ b/css/kandev.css
@@ -200,11 +200,11 @@ footer {
     align-items: center;
     justify-content: center;
     font-size: 0.87rem;
-    color: #64748b;
+    color: white;
 }
 
 footer a {
-    color: #64748b;
+    color: white;
     text-decoration: none;
     display: inline-block;
 }
